--- a/test1/实验一.md
+++ b/test1/实验一.md
@@ -6,11 +6,11 @@
 ## 教材中的查询语句
 查询1：
 ```SQL
-SELECT d.department_name，count(e.job_id)as "部门总人数"，
+SELECT d.department_name,count(e.job_id)as "部门总人数",
 avg(e.salary)as "平均工资"
-from hr.departments d，hr.employees e
+from hr.departments d,hr.employees e
 where d.department_id = e.department_id
-and d.department_name in ('IT'，'Sales')
+and d.department_name in ('IT','Sales')
 GROUP BY department_name;
 ```
 ![测试图片](../images/1.jpg)
