实验一修改

--- a/test1/实验一.md
+++ b/test1/实验一.md
@@ -13,4 +13,16 @@ where d.department_id = e.department_id
 and d.department_name in ('IT','Sales')
 GROUP BY department_name;
 ```
-![测试图片](../images/1.jpg)
+执行结果：
+![测试图片](../images/2.png)
+查询2：
+```SQL
+SELECT d.department_name,count(e.job_id)as "部门总人数",
+avg(e.salary)as "平均工资"
+FROM hr.departments d,hr.employees e
+WHERE d.department_id = e.department_id
+GROUP BY department_name
+HAVING d.department_name in ('IT','Sales');
+```
+执行结果：
+![测试图片](../images/3.png)
