--- a/test1/实验一.md
+++ b/test1/实验一.md
@@ -17,6 +17,14 @@ GROUP BY department_name;
 
 ![测试图片](../images/2.png)
 
+分析：
+
+*   执行计划
+
+![测试图片](../images/1_执行计划.png)
+
+*   优化建议：sqldeveloper的优化指导工具给出了相应的优化建议，通过创建一个或多个索引可以改进此语句的执行计划。
+
 查询2：
 ```SQL
 SELECT d.department_name,count(e.job_id)as "部门总人数",
@@ -29,3 +37,8 @@ HAVING d.department_name in ('IT','Sales');
 执行结果：
 
 ![测试图片](../images/3.png)
+
+分析：
+*   执行计划
+![测试图片](../images/2_执行计划.png)
+*   优化建议：sqldeveloper的优化指导工具未给出优化建议。
