--- a/test1/实验一.md
+++ b/test1/实验一.md
@@ -39,6 +39,12 @@ HAVING d.department_name in ('IT','Sales');
 ![测试图片](../images/3.png)
 
 分析：
+
 *   执行计划
+
 ![测试图片](../images/2_执行计划.png)
+
 *   优化建议：sqldeveloper的优化指导工具未给出优化建议。
+
+比较：
+通过分析上面两个比较复杂的返回相同查询结果数据集的SQL语句各自的执行计划，
