--- a/test1/实验一.md
+++ b/test1/实验一.md
@@ -15,7 +15,7 @@ GROUP BY department_name;
 ```
 执行结果：
 
-![测试图片](../images/2.png)
+![测试图片](../images/1.png)
 
 分析：
 
@@ -36,7 +36,7 @@ HAVING d.department_name in ('IT','Sales');
 ```
 执行结果：
 
-![测试图片](../images/3.png)
+![测试图片](../images/2.png)
 
 分析：
 
@@ -47,4 +47,20 @@ HAVING d.department_name in ('IT','Sales');
 *   优化建议：sqldeveloper的优化指导工具未给出优化建议。
 
 比较：
-通过分析上面两个比较复杂的返回相同查询结果数据集的SQL语句各自的执行计划，
+通过分析上面两个比较复杂的返回相同查询结果数据集的SQL语句各自的执行计划，比较consistent gets，physical reads，cost三个统计信息的属性的输出值，发现第二个查询语句的输出值大小整体小于第一个查询语句的输出值打下，所以第二个查询语句更优。
+
+## 自定义查询
+```SQL
+SELECT d.department_name,count(e.job_id)as "部门总人数",
+avg(e.salary)as "平均工资"
+FROM hr.departments d,hr.employees e
+WHERE d.department_id = e.department_id
+and d.department_name = 'IT' or d.department_name = 'Sales'
+GROUP BY department_name
+```
+
+执行结果：
+
+![测试图片](../images/3.png)
+
+*   优化建议：在进行连接的时候会造成开销很大的笛卡尔积操作，可以进一步优化。
