实验一修改

--- a/test1/实验一.md
+++ b/test1/实验一.md
@@ -47,7 +47,7 @@ HAVING d.department_name in ('IT','Sales');
 *   优化建议：sqldeveloper的优化指导工具未给出优化建议。
 
 比较：
-通过分析上面两个比较复杂的返回相同查询结果数据集的SQL语句各自的执行计划，比较consistent gets，physical reads，cost三个统计信息的属性的输出值，发现第二个查询语句的输出值大小整体小于第一个查询语句的输出值打下，所以第二个查询语句更优。
+通过分析上面两个比较复杂的返回相同查询结果数据集的SQL语句各自的执行计划，比较consistent gets，physical reads，cost三个统计信息的属性的输出值，发现第二个查询语句的输出值大小整体小于第一个查询语句的输出值大小，所以第二个查询语句更优。
 
 ## 自定义查询
 ```SQL
