--- a/test1/实验一.md
+++ b/test1/实验一.md
@@ -23,6 +23,7 @@ GROUP BY department_name;
 
 ![测试图片](../images/1_执行计划.png)
 
+*   其中，Cost=5，Rows=20，Predicate information(谓词信息)中又一次索引搜索access，一次全表搜索filter。
 *   优化建议：sqldeveloper的优化指导工具给出了相应的优化建议，通过创建一个或多个索引可以改进此语句的执行计划。
 
 查询2：
@@ -44,10 +45,11 @@ HAVING d.department_name in ('IT','Sales');
 
 ![测试图片](../images/2_执行计划.png)
 
+*   其中：Cost=7，Rows=106，Predicate information（谓词信息）中又一次索引搜索access，两次全表搜索filter。
 *   优化建议：sqldeveloper的优化指导工具未给出优化建议。
 
 比较：
-通过分析上面两个比较复杂的返回相同查询结果数据集的SQL语句各自的执行计划，比较consistent gets，physical reads，cost三个统计信息的属性的输出值，发现第二个查询语句的输出值大小整体小于第一个查询语句的输出值大小，所以第二个查询语句更优。
+总体来看，查询1比查询2更优，这是因为查询1除了"consistent gets=10"比查询2的"consistent gets=9"稍差，其他参数都优于查询2。
 
 ## 自定义查询
 ```SQL
@@ -58,9 +60,14 @@ WHERE d.department_id = e.department_id
 and d.department_name = 'IT' or d.department_name = 'Sales'
 GROUP BY department_name
 ```
+分析：
+
+*   执行计划
+
+![测试图片](../images/3_执行计划.png)
 
 执行结果：
 
 ![测试图片](../images/3.png)
 
-*   优化建议：在进行连接的时候会造成开销很大的笛卡尔积操作，可以进一步优化。
+*   优化建议：在进行连接的时候会造成开销很大的笛卡尔积操作，考虑从此语句中移去断开连接的表或视图, 或者添加引用它的联接条件。。
