--- a/test1/实验一.md
+++ b/test1/实验一.md
@@ -68,6 +68,6 @@ GROUP BY department_name
 
 执行结果：
 
-![测试图片](../images/3.png)
+![测试图片](../images/3_3.png)
 
 *   优化建议：在进行连接的时候会造成开销很大的笛卡尔积操作，考虑从此语句中移去断开连接的表或视图, 或者添加引用它的联接条件。。
