实验二修改

--- a/test2/实验2.md
+++ b/test2/实验2.md
@@ -96,4 +96,4 @@ SQL>SELECT a.tablespace_name "表空间名",Total/1024/1024 "大小MB",
 - MAX_MB是指数据文件的最大容量。
 
 > 执行结果为:
->> ![图片](../images/04.png)
+>> ![图片](../images/04.PNG)
