实验二修改

--- a/test2/实验2.md
+++ b/test2/实验2.md
@@ -40,20 +40,20 @@ SQL> exit
 $ sqlplus new_user/123@pdborcl
 SQL> show user;
 USER is "NEW_USER"
-SQL> CREATE TABLE mytable (id number,name varchar(50));
+SQL> CREATE TABLE project (id number,name varchar(50));
 Table created.
-SQL> INSERT INTO mytable(id,name)VALUES(1,'zhang');
+SQL> INSERT INTO project(id,name)VALUES(1,'zhang');
 1 row created.
-SQL> INSERT INTO mytable(id,name)VALUES (2,'wang');
+SQL> INSERT INTO project(id,name)VALUES (2,'wang');
 1 row created.
-SQL> CREATE VIEW myview AS SELECT name FROM mytable;
+SQL> CREATE VIEW project_view AS SELECT name FROM project;
 View created.
-SQL> SELECT * FROM myview;
+SQL> SELECT * FROM project_view;
 NAME
 --------------------------------------------------
-zhang
-wang
-SQL> GRANT SELECT ON myview TO hr;
+allan
+chenliang
+SQL> GRANT SELECT ON project_view TO hr;
 Grant succeeded.
 SQL>exit
 ```
@@ -64,11 +64,11 @@ SQL>exit
 
 ```sql
 $ sqlplus hr/123@pdborcl
-SQL> SELECT * FROM new_user.myview;
+SQL> SELECT * FROM new_allan.project_view;
 NAME
 --------------------------------------------------
-zhang
-wang
+allan
+chenliang
 SQL> exit
 ```
 
