--- a/test2/实验2.md
+++ b/test2/实验2.md
@@ -34,7 +34,7 @@ SQL> exit
 > 执行结果：
 >> ![图片](../images/01.PNG)
 
-- 第2步：新用户new_user连接到pdborcl，创建表project和视图project_view，插入数据，最后将project_view的SELECT对象权限授予hr用户。
+- 第2步：新用户new_allan连接到pdborcl，创建表project和视图project_view，插入数据，最后将project_view的SELECT对象权限授予hr用户。
 
 ```sql
 $ sqlplus new_user/123@pdborcl
