实验三修改

--- a/test3/实验3.md
+++ b/test3/实验3.md
@@ -14,11 +14,13 @@
 
 ## 实验步骤
 
-### 用户名new_allan
+## 用户名new_allan
 
 ## 一、创建表及分区
-## 1、创建orders和orders_details表
-### 创建orders表的语句是：
+
+### 1、创建orders和orders_details表
+
+#### 创建orders表的语句是：
 
 ```sql
 CREATE TABLE orders 
@@ -100,7 +102,7 @@ alter table orders add primary key (order_id)
 
 ![图片](../images/3_03.png)
 
-### 创建order_details表的语句
+#### 创建order_details表的语句
 ```sql
 CREATE TABLE order_details 
 (
