--- a/test4/实验4.md
+++ b/test4/实验4.md
@@ -74,3 +74,10 @@ SELECT * from order_details where id=300001;
 #### 执行结果
 ![图片](./images/12.png)
 
+## 查询数据
+### 查询某个员工的信息
+```SQL
+SELECT * from employees where employee_id=11;
+```
+#### 执行结果
+![图片](./images/4_01.png)
