--- a/test4/实验4.md
+++ b/test4/实验4.md
@@ -75,9 +75,69 @@ SELECT * from order_details where id=300001;
 ![图片](./images/12.png)
 
 ## 查询数据
-### 查询某个员工的信息
+### 1、查询某个员工的信息
 ```SQL
 SELECT * from employees where employee_id=11;
 ```
 #### 执行结果
 ![图片](./images/4_01.png)
+
+### 2、递归查询某个员工及其所有下属，子下属员工。
+### 查询某个员工的信息
+```SQL
+SELECT * FROM employees START WITH EMPLOYEE_ID = 11 CONNECT BY PRIOR EMPLOYEE_ID = MANAGER_ID;
+```
+#### 执行结果
+![图片](./images/4_02.png)
+
+### 3、查询订单表，并且包括订单的订单应收货款: Trade_Receivable= sum(订单详单表.ProductNum*订单详单表.ProductPrice)- Discount。
+```SQL
+SELECT
+order_id,
+pay-discount as Trade_Receivable
+from
+    (select
+        orders.order_id as order_id,
+        ORDERS.DISCOUNT as discount,
+        sum(PRODUCT_NUM*PRODUCT_PRICE) as pay
+        from ORDER_DETAILS 
+        inner join ORDERS on(orders.order_id=order_details.order_id) 
+        group by orders.order_id, ORDERS.DISCOUNT
+);
+```
+#### 执行结果
+![图片](./images/4_03.png)
+
+### 4、查询订单详表，要求显示订单的客户名称和客户电话，产品类型用汉字描述。
+```SQL
+select o.CUSTOMER_NAME as "顾客名称", o.CUSTOMER_TEL as "顾客电话", od.PRODUCT_NAME as "产品类型"
+from ORDERS o, ORDER_DETAILS od
+where o.order_id = od.order_id;
+```
+#### 执行结果
+![图片](./images/4_04.png)
+
+### 5、查询出所有空订单，即没有订单详单的订单。
+```SQL
+select * from orders where orders.order_id not in(select order_id from order_details);
+```
+#### 执行结果
+![图片](./images/4_05.png)
+
+### 6、查询部门表，同时显示部门的负责人姓名。
+```SQL
+select DEPARTMENT_NAME as "部门",MANAGER_ID as "部门负责人" 
+from DEPARTMENTS d,EMPLOYEES e
+where d.DEPARTMENT_ID=e.DEPARTMENT_ID;
+```
+#### 执行结果
+![图片](./images/4_06.png)
+
+### 7、查询部门表，统计每个部门的销售总金额。
+```SQL
+select DEPARTMENT_NAME,SUM(o.Trade_Receivable)AS "销售总金额"
+from DEPARTMENTS d,EMPLOYEES e,ORDERS o
+where d.DEPARTMENT_ID=e.DEPARTMENT_ID and e.EMPLOYEE_ID=o.EMPLOYEE_ID group by DEPARTMENT_NAME;
+```
+#### 执行结果
+![图片](./images/4_07.png)
